--- a/eventBubbling/eventDelegation/index.html
+++ b/eventBubbling/eventDelegation/index.html
@@ -20,10 +20,13 @@
         </form>
 
 
-        <form id = "signin2" action="">
+        <form id="signin2" action="">
             <ul>
                 <li><input type="text"></li>
-                <li><input type="text"></li><li><input type="text"></li><li><input type="text"></li><li><input type="text"></li>
+                <li><input type="text"></li>
+                <li><input type="text"></li>
+                <li><input type="text"></li>
+                <li><input type="text"></li>
             </ul>
     </form>    
     <script src="./script.js"></script>
